--- a/LeafletBlazor-main/LeafletBlazorTestRig/Pages/Index.razor
+++ b/LeafletBlazor-main/LeafletBlazorTestRig/Pages/Index.razor
@@ -8,11 +8,8 @@
 
 
 <div class="my-3">
-    <EditForm Model="MarkerViewModel" OnSubmit="AddMarkerAtMapCenter">
-        <button id = "btnStart" onclick="style.display = 'none'" type="submit" class="btn btn-primary my-3" >Show Markers</button>
-        
-    </EditForm>
-
-
-
+   @* <h2>Add a new Location !</h2>
+    <EditForm Model="MarkerViewModel" OnSubmit="marker.BindPopup(popupContent)">
+         <button type="submit" class="btn btn-primary my-3">Add Marker</button>
+    </EditForm>*@
 </div>
