--- a/LeafletBlazor-main/LeafletBlazorTestRig/Shared/NavMenu.razor
+++ b/LeafletBlazor-main/LeafletBlazorTestRig/Shared/NavMenu.razor
@@ -8,20 +8,20 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="/markers/2" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Leaflet Map
             </NavLink>
+            
         </li>
     </ul>
 </div>
 
-@code {
-    private bool collapseNavMenu = true;
+@code { private bool collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+            private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
+            private void ToggleNavMenu()
+            {
+                collapseNavMenu = !collapseNavMenu;
+            }
     }
-}
