--- a/LeafletBlazor-main/LeafletBlazorTestRig/Pages/Index.razor
+++ b/LeafletBlazor-main/LeafletBlazorTestRig/Pages/Index.razor
@@ -7,60 +7,43 @@
 </div>
 
 <div class="my-3">
+   @* <EditForm Model="MarkerViewModel" OnSubmit="GetMarkerById">
+        <button type="submit" class="btn btn-primary my-3">View Marker</button>
+    </EditForm>*@
       <EditForm Model="MarkerViewModel" oncontextmenu="PostMarkerOnLeftClick">
         <div class="form-row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="keyboard">Marker has a Tab Stop</label>
-                    <InputCheckbox id="keyboard" @bind-Value="@MarkerViewModel.Keyboard" class="form-control" />
-                </div>
+            <div class="col">           
             </div>
             <div class="col">
                 <div class="form-group">
                     <label for="title">Title of Marker</label>
                     <InputText id="title" @bind-Value="@MarkerViewModel.Title" class="form-control" placeholder="Title of marker" />
                 </div>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="col">
                 <div class="form-group">
-                    <label for="alt">Icon Alt Description</label>
-                    <InputText id="alt" @bind-Value="@MarkerViewModel.Alt" class="form-control" placeholder="Icon Alt description" />
+                    <label for="slope1">1st Slope</label>
+                    <InputText id="slope1" @bind-Value="@MarkerViewModel.Slope1" class="form-control" placeholder="Slope 1" />
+                </div>
+                <div class="form-group">
+                    <label for="slope2">2nd Slope</label>
+                    <InputText id="slope2" @bind-Value="@MarkerViewModel.Slope2" class="form-control" placeholder="Slope 2" />
+                </div>
+                <div class="form-group">
+                    <label for="slope3">3rd Slope</label>
+                    <InputText id="slope3" @bind-Value="@MarkerViewModel.Slope3" class="form-control" placeholder="Slope 3" />
+                </div>
+                <div class="form-group">
+                    <label for="slope4">4th Slope</label>
+                    <InputText id="slope4" @bind-Value="@MarkerViewModel.Slope4" class="form-control" placeholder="Slope 4" />
+                </div>
+                 <div class="form-group">
+                    <label for="image">Insert Image</label>
+                    <InputText id="image" @bind-Value="@MarkerViewModel.Image" class="form-control" placeholder="Image" />
+                </div>
+                <div class="form-group">
+                    <label for="link">Link catre Cazare</label>
+                    <InputText id="link" @bind-Value="@MarkerViewModel.Link" class="form-control" placeholder="Link" />
                 </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="zindexoffset">Z Index Offset</label>
-                    <InputNumber id="zindexoffset" @bind-Value="@MarkerViewModel.ZIndexOffset" class="form-control" />
-                </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="opacity">Opacity</label>
-                    <input type="range" min="0.0" max="1.0" step="0.1" class="form-control-range" id="opacity" @bind-value="@MarkerViewModel.Opacity" />
-                </div>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="riseonhover">Rise of Hover</label>
-                    <InputCheckbox id="riseonhover" @bind-Value="@MarkerViewModel.RiseOnHover" class="form-control" />
-                </div>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="col">
-                <div class="form-group">
-                    <label for="riseoffset">Rise Offset</label>
-                    <InputNumber id="riseoffset" @bind-Value="@MarkerViewModel.RiseOffset" class="form-control" />
-                </div>
-            </div>
-        </div>
     </EditForm>
 </div>
