--- a/LeafletBlazor-main/LeafletBlazorTestRig/Shared/MainLayout.razor
+++ b/LeafletBlazor-main/LeafletBlazorTestRig/Shared/MainLayout.razor
@@ -1,7 +1,9 @@
-﻿@inherits LayoutComponentBase
-<div class="sidebar">
+﻿
+@inherits LayoutComponentBase
+
+@*<div class="sidebar">
     <NavMenu />
-</div>
+</div>*@
 <div class="main">
     <div class="content px-4">
         @Body
